--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "@tarojs/runtime": "3.3.4",
     "@tarojs/taro": "3.3.4",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
